# Gype

./: .gitattributes  .gitignore  .prettierignore  CMakeLists.txt  CMakeSettings.json  FORME.md  LICENSE  README.ZH.md  README.md  SConstruct  build.ps1  compile.ps1  getlib.bat  getlib.sh  gsc  gsc.bat  gsc.ps1  objects.rsp  out.txt  package-lock.json  tsconfig.json
example/: MyNode.js  MySprite.js  MySprite.ts  MySprite2.js  control.ts  control.tscn  export_presets.cfg  game.pck  new_script.js  node.d.ts  node.ts  node.tscn  node_2d.gd  node_2d.ts  node_2d.tscn  project.godot  script.ts  spin_box.ts  sprite_2d.tscn  text_edit.ts  tsconfig.json
example/.dist/: MyNode.js  MyNode1.js  MyNode2.js  MySprite.js  MySprite1.js  MySprite2.js  Sprite.js  class_defined.js  control.js  line_edit.js  node.js  node_2d.js  script1.js  spin_box.js  text_edit.js  tsconfig.tsbuildinfo
example/export/: game.apk.idsig  game.pck  game.sh
example/scenes/: player.tscn  world.tscn
example/scripts/: player.ts  world.ts
example/src/: node.js  node1.js
examples/gypequickstart/: icon.svg.import  project.godot
examples/rpg-demo/: export_presets.cfg  icon.svg.import  node_2d.tscn  project.godot  tsconfig.json
game/: icon.svg.import
godot-cpp/: CMakeLists.txt  SConstruct  binding_generator.py
godot-cpp/gdextension/: gdextension_interface.h
godot-cpp/include/godot_cpp/: godot.hpp  variant_size.hpp
godot-cpp/include/godot_cpp/classes/: ref.hpp  wrapped.hpp
godot-cpp/include/godot_cpp/core/: class_db.hpp  convert_helper.hpp  error_macros.hpp  instance_binding.hpp  instance_info.hpp  logger.hpp  math.hpp  memory.hpp  method_bind.hpp  method_ptrcall.hpp  os_windows.hpp  property_info.hpp  type_info.hpp
godot-cpp/include/godot_cpp/templates/: vararg.h  vararg.hpp
godot-cpp/include/godot_cpp/variant/: aabb.hpp  basis.hpp  callable_jsmethod_pointer.hpp  callable_method_pointer.hpp  color.hpp  plane.hpp  projection.hpp  quaternion.hpp  rect2.hpp  rect2i.hpp  transform2d.hpp  transform3d.hpp  typed_array.hpp  utility_functions.hpp  variant.hpp  vector2.hpp  vector2i.hpp  vector3.hpp  vector3i.hpp  vector4.hpp  vector4i.hpp
godot-cpp/src/: godot.cpp
godot-cpp/src/core/: class_db.cpp  error_macros.cpp  instance_info.cpp  logger.cpp  memory.cpp  method_bind.cpp  object.cpp  os_windows.cpp
godot-cpp/src/variant/: aabb.cpp  basis.cpp  callable_jsmethod_pointer.cpp  callable_method_pointer.cpp  color.cpp  plane.cpp  projection.cpp  quaternion.cpp  rect2.cpp  rect2i.cpp  transform2d.cpp  transform3d.cpp  utility_functions.cpp  variant.cpp  vector2.cpp  vector2i.cpp  vector3.cpp  vector3i.cpp  vector4.cpp  vector4i.cpp
godot-cpp/test/project/: project.godot
godot-cpp/test/src/: example.h  javascript.cpp  javascript.h  javascript_language.cpp  javascript_language.h  javascript_loader.cpp  javascript_loader.h  javascript_saver.cpp  javascript_saver.h  register_types.cpp
godot-cpp/tools/: godotcpp.py
include/: god_ts.h
include/ast/: ast_builder.h
include/core/: variant_size.hpp
include/gde/: gdextension_api.h  gdextension_api.hpp  gdextension_interface.h
include/qjs/: qjspp.h  quickjs.h
include/qjspp/: utils.h
include/quickjs/: quickjspp.hpp
include/register/: register_builtin_classes.h  register_classes.h  register_enums.h  register_internal_api.h  register_types.h  register_utility_functions.h  utils.h
include/support/: binding_callbacks.hpp  callable_jsmethod_pointer.hpp  class_info.hpp  console_support.hpp  instance_binding.hpp  instance_info.hpp  javascript.hpp  javascript_instance.hpp  javascript_language.hpp  javascript_loader.hpp  javascript_saver.hpp  js_parser.h  module_loader.hpp  placeholder_javascript_instance.hpp  script_rid.hpp  typescript.h  typescript.hpp  typescript_instance.h  typescript_instance.hpp  typescript_language.h  typescript_language.hpp  typescript_loader.h  typescript_loader.hpp  typescript_saver.h  typescript_saver.hpp
include/utils/: env.h  func_utils.h  func_utils.hpp  quickjs_helper.h  quickjs_helper.hpp  register_helper.h  str_helper.h  str_helper.hpp  str_utils.h  variant_helper.hpp  vector_helper.hpp
include/wrapper/: array_wrapper.h  callable_wrapper.h  dictionary_wrapper.h  js_object.h  object_wrapper.h  string_name_wrapper.h  string_wrapper.h  variant_wrapper.h  wrappers.h
js_example/string/: index.js
quickjs/: .sconsign.dblite  CMakeLists.txt  SConstruct
quickjs/include/: cutils.h  qjspp.hpp  quickjs-parser.h  quickjs.h
quickjs/include/quickjs/: class_ids.h  env.h  event_loop.h  finalizer.h  js_pointer.h  qjspp.h  qjspp.hpp  quickjs.h  quickjs_helper.h  str_utils.h  utils.h
quickjs/include/quickjs/wrapper/: array_wrapper.h  dictionary_wrapper.h  js_object.h  object_wrapper.h  slow_array_wrapper.h  string_wrapper.h  wrappers.h
quickjs/src/: class_ids.cpp  cutils.c  env.c  env.cpp  event_loop.c  finalizer.cpp  js_pointer.cpp  libbf.c  libregexp.c  libunicode.c  quickjs-libc.c  quickjs.c  quickjs_helper.cpp  str_helper.cpp  str_utils.cpp  utils.cpp
quickjs/src/wrapper/: array_wrapper.cpp  callable_wrapper.cpp  dictionary_wrapper.cpp  js_object.cpp  object_wrapper.cpp  slow_array_wrapper.cpp  string_wrapper.cpp  variant_wrapper.cpp
quickjspp/: CMakeLists.txt
quickjspp/include/: godot_headers.hpp  qjspp.hpp
src/: main.cpp
src/gde/: gdextension_api.cpp
src/generator/: register_generator.py
src/js_godot/: tsconfig.json
src/qjspp/: utils.cpp
src/register/: register_builtin_classes.cpp  register_builtin_classes_AABB.cpp  register_builtin_classes_Array.cpp  register_builtin_classes_Basis.cpp  register_builtin_classes_Callable.cpp  register_builtin_classes_Color.cpp  register_builtin_classes_Dictionary.cpp  register_builtin_classes_NodePath.cpp  register_builtin_classes_PackedByteArray.cpp  (+1326 more)
tree-sitter/: CMakeLists.txt  SConstruct
tree-sitter/include/tree_sitter/: api.h
tree-sitter/src/: alloc.c  lib.c
tree-sitter/src/javascript/: parser.c  scanner.c
tree-sitter/src/typescript/: scanner.c
tree-sitter/src/typescript/common/: scanner.h
ts_example/: hello.js  hello.ts  test.js  test.ts  tsconfig.json
(+4093 files in other folders)
